--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -8,7 +8,7 @@
     app:behavior_peekHeight="0dp"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -21,5 +21,5 @@
         android:textSize="40sp"
         android:layout_alignParentLeft="true"/>
 
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 </RelativeLayout>
